added POST to create new prediction

--- a/views/index.html
+++ b/views/index.html
@@ -14,20 +14,23 @@
     <link rel="stylesheet" href="styles/styles.css">
 
     <!-- VENDOR SCRIPTS -->
-  <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
-  <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+    <script src ="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
 
     <!-- APPLICATION SCRIPTS -->
     <script src="scripts/app.js"></script>
   </head>
 
   <body>
-    <h1>
-      Pundit tracker
-    </h1>
-    <a href="pundit-view">Home</a>
-    <button id="question">Test</button>
-    <div id="answer"></div>
+    <div>
+      <h3>Pundit tracker</h3>
+    </div>
+
+    <button id="openModal">Submit a prediction</button>
+
+    <!-- TODO insert modal -->
+
+
   </body>
 </html>
