got rid of second page

--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,15 @@
   <body>
     <div class="container">
       <div class="row">
-        <h2>Pundit tracker</h2>
+        <h2 class="text-center">Pundit tracker</h2>
+        <div class="col-md-5">
+          <p>
+            About:
+            Pundit Tracker lets you easily keep track of claims that pundits make.
+            Submissions should include a definite end date (e.g., June 12, 2017).
+            It's not a perfect science, but neither is punditry.
+          </p>
+        </div>
       <button type="button" class="btn btn-primary" id="openModal">Submit a prediction</button>
       <!-- TODO insert modal -->
       </div>
