added js for admin and some css

--- a/views/admin.html
+++ b/views/admin.html
@@ -1,1 +1,32 @@
-<p>Secret admin stuff to go here</p>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Admin page</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles/styles.css">
+
+    <!-- VENDOR SCRIPTS -->
+    <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
+
+    <!-- APPLICATION SCRIPTS -->
+    <script src="scripts/app.js"></script>
+  </head>
+
+  <body>
+
+      <div id="targetAdmin">
+      <!-- TODO  Render all pundits here (on page load) with handlebars-->
+      <!-- TODO  Add a delete button-->
+      <!-- TODO  Add an update button-->
+      </div>
+
+  </body>
+
+</html>
