--- a/views/index.html
+++ b/views/index.html
@@ -31,15 +31,16 @@
         <div class="row">
             <div class="col-md-5" id="about">
                 <p>
-                    <b>Pundit Tracker</b> lets you easily keep track of claims that pundits make.
-                    Submissions should include a definite end date (e.g., June 12, 2017).
-                    It's not a perfect science, but neither is punditry.
+                    <b>Pundit Tracker</b> lets you keep track of predictions that pundits make.
+                    Submissions should be able to be checked with a simple Google search.
+                    They should also include a definite end date (e.g., June 12, 2017).
+                    It&rsquo;s not a perfect science, but neither is punditry.
                 </p>
             </div>
             <div class="col-md-4 col-md-offset-2">
               <form>
                 <fieldset class="form-group">
-                  <input type="text" class="form-control" placeholder="What's the prediction?">
+                  <input type="text" class="form-control" placeholder="What&rsquo;s the prediction?">
                 </fieldset>
                 <fieldset class="form-group">
                   <input type="text" class="form-control" placeholder="Who made it?">
@@ -48,7 +49,7 @@
                   <input type="text" id="date-picker" class="form-control" placeholder="When should we check it?">
                 </fieldset>
                 <fieldset class="form-group">
-                  <input type="text" class="form-control" placeholder="What's the source?">
+                  <input type="text" class="form-control" placeholder="What&rsquo;s the source?">
                 </fieldset>
                 <fieldset class="form-group">
                   <input type="text" class="form-control" placeholder="Enter a link to the source if you have one.">
@@ -61,7 +62,7 @@
         <br>
         <div class="row">
             <div class="col-md-5 predictionColumn">
-                <h3>PAST PREDICTIONS</h3>
+                <h3 class="text-center">PAST PREDICTIONS</h3>
                 <br>
                 <div id="targetPast">
                     <script id="templatePast" type="text/x-handlebars-template">
@@ -88,7 +89,7 @@
                 </div>
             </div>
             <div class="col-md-5 col-md-offset-2 predictionColumn">
-                <h3>FUTURE PREDICTIONS</h3>
+                <h3 class="text-center">FUTURE PREDICTIONS</h3>
                 <br>
                 <div id="targetFuture">
                   <script id="templateFuture" type="text/x-handlebars-template">
