delete function WIP

--- a/views/admin.html
+++ b/views/admin.html
@@ -88,7 +88,7 @@
                 {{truthValue}}
               </p>
               <br>
-              <button type="button" name="button" class="deleteBtn btn btn-danger">Delete</button>
+              <button type="button" name="button" class="deleteBtn btn btn-danger" data-id={{_id}}>Delete</button>
               {{/each}}
           </script>
         </div>
