--- a/views/admin.html
+++ b/views/admin.html
@@ -61,7 +61,9 @@
             <button type="submit" class="btn btn-primary">Update</button>
           </form>
         </div>
+        <div id="updateMessageTarget" class="col-md-2">
       </div>
+
       <div class= "row" id="targetAdmin">
         <div class="col-md-8">
           <script id="templateAdmin" type="text/x-handlebars-template">
@@ -75,10 +77,10 @@
                 <br>
                 <img src='{{photo}}'>
                 <br>
-                {{#each predictions}}
+                {{!-- {{#each predictions}}
                 <b>Prediction: </b>
                 {{predictionDescr}}
-                {{/each}}
+                {{/each}} --}}
                 <br>
 
                 <b>Source: </b>
