--- a/views/index.html
+++ b/views/index.html
@@ -33,9 +33,11 @@
                 <p>
                     Lots of people predict things—election results, the weather, the likelihood that an asteroid will wipe out Omaha tomorrow. Sometimes they&rsquo;re right, sometimes
                     they&rsquo;re wrong. (Newspaper columnists are usually wrong.) But it&rsquo;s
-                    hard to keep track of all those predictions floating around in the ether. And that makes
-                    it hard to hold the media accountable for their mistakes. <b>Pundit Tracker</b> lets
-                    you log predictions that pundits make. Submissions should be able to be checked with a simple
+                    hard to keep remember all those predictions floating around in the ether. And that makes
+                    it hard to hold the media accountable for their mistakes.
+                    <br>
+                    <br>
+                    <b>Pundit Tracker</b> lets you keep track of predictions. Submissions should be able to be checked with a simple
                     Google search. They should also include a date when the prediction can be judged true or false.
                     It&rsquo;s not a perfect science, but neither is punditry.
                 </p>
