--- a/views/admin.html
+++ b/views/admin.html
@@ -61,8 +61,7 @@
             <button type="submit" class="btn btn-primary">Update</button>
           </form>
         </div>
-        <div id="updateMessageTarget" class="col-md-2">
-      </div>
+        <div id="updateMessageTarget" class="col-md-2"></div>
 
       <div class= "row" id="targetAdmin">
         <div class="col-md-8">
