--- a/views/index.html
+++ b/views/index.html
@@ -33,11 +33,11 @@
                 <p>
                     Lots of people predict things—election results, the weather, the likelihood that an asteroid will wipe out Omaha tomorrow. Sometimes they&rsquo;re right, sometimes
                     they&rsquo;re wrong. (Newspaper columnists are usually wrong.) But it&rsquo;s
-                    hard to keep remember all those predictions floating around in the ether. And that makes
+                    hard to remember all those predictions floating around in the ether. And that makes
                     it hard to hold the media accountable for their mistakes.
                     <br>
                     <br>
-                    <b>Pundit Tracker</b> lets you keep track of predictions. Submissions should be able to be checked with a simple
+                    <b>Pundit Tracker</b> lets you keep track of predictions that you find anywhere. Submissions should be able to be checked with a simple
                     Google search. They should also include a date when the prediction can be judged true or false.
                     It&rsquo;s not a perfect science, but neither is punditry.
                 </p>
@@ -45,19 +45,19 @@
             <div class="col-md-4 col-md-offset-1">
               <form id="newPredictionForm">
                 <fieldset class="form-group">
-                  <input type="text" name="predictionDescr" class="form-control" placeholder="What&rsquo;s the prediction?">
+                  <input type="text" name="predictionDescr" class="form-control" placeholder="What&rsquo;s the prediction?" required=''>
                 </fieldset>
                 <fieldset class="form-group">
-                  <input type="text" name="name" class="form-control" placeholder="Who made it?">
+                  <input type="text" name="name" class="form-control" placeholder="Who made it?" required=''>
                 </fieldset>
                 <fieldset class="form-group">
                   <input type="text" name="photo" class="form-control" placeholder="Enter a link to a photo of the pundit.">
                 </fieldset>
                 <fieldset class="form-group">
-                  <input type="text" name="checkDate" id="date-picker" class="form-control" placeholder="When should we check the prediction?">
+                  <input type="text" name="checkDate" id="date-picker" class="form-control" placeholder="When should we check the prediction?" required=''>
                 </fieldset>
                 <fieldset class="form-group">
-                  <input type="text" name="sourceDescr" class="form-control" placeholder="What&rsquo;s the source?">
+                  <input type="text" name="sourceDescr" class="form-control" placeholder="What&rsquo;s the source?" required=''>
                 </fieldset>
                 <fieldset class="form-group">
                   <input type="text" name="sourceUrl" class="form-control" placeholder="Enter a link to the source if you have one.">
@@ -74,26 +74,23 @@
                 <br>
                 <div id="targetPast">
                     <script id="templatePast" type="text/x-handlebars-template">
-                      {{#each pundit}}
-
-                        {{!-- #if isChecked, then --}}
-                          <p>
-                            {{#each predictions}}
-                            <b>Prediction: </b>
-                            {{predictionDescr}}
-                            {{/each}}
+                      {{#each pundit.prediction}}
+                        <p>
+                          <b>Prediction: </b>
+                          {{predictionDescr}}
                           <br>
+                      {{/each}}
+                       {{#each pundit}}
                           <img src='{{photo}}'>
                           {{name}}
                           <br>
+                      {{/each}}
                           {{#each predictions}}
                           <b>Source: </b>
                           <a href='{{sourceUrl}}'>{{sourceDescr}}</a>
                           <br>
                           <b>True or false? </b>
                           {{truthValue}}
-                          {{/each}}
-                        {{!-- {{/if}} --}}
                       </p>
                       {{/each}}
                     </script>
@@ -105,26 +102,26 @@
                 <div id="targetCurrent">
                   <script id="templateCurrent" type="text/x-handlebars-template">
                     {{#each pundit}}
-                  {{!-- if !isChecked, then --}}
-                        <p>
-                          {{#each predictions}}
-                          <b>Prediction: </b>
-                          {{predictionDescr}}
-                          {{/each}}
-                          <br>
-                          <b>Pundit: </b>
-                          {{name}}
-                          <img src='{{photo}}'>
-                          <br>
-                          {{#each predictions}}
-                          <b>Source: </b>
-                          <a href='{{sourceUrl}}'>{{sourceDescr}}</a>
-                          <br>
-                          <b>Date this will be checked: </b>
-                          {{checkDate}}
-                          {{/each}}
-                      {{!-- {{/if}} --}}
-                        </p>
+                    {{name}}
+                    {{/each}}
+                    {{#each pundit.predictions}}
+                      <p>
+                        <b>Prediction: </b>
+                        {{predictionDescr}}
+                        <br>
+                    {{/each}}
+                    {{#each pundit}}
+                        <img src='{{photo}}'>
+                        {{name}}
+                        <br>
+                    {{/each}}
+                    {{#each pundit.predictions}}
+                      <b>Source: </b>
+                      <a href='{{sourceUrl}}'>{{sourceDescr}}</a>
+                      <br>
+                      <b>Date this will be checked: </b>
+                      {{checkDate}}
+                      </p>
                     {{/each}}
                   </script>
                 </div>
