about to try out a new function to untangle the pundits/predictions data

--- a/views/index.html
+++ b/views/index.html
@@ -51,7 +51,7 @@
               <input type="text" name="name" class="form-control" placeholder="Who made it?" required=''>
             </fieldset>
             <fieldset class="form-group">
-              <input type="text" name="photo" class="form-control" placeholder="Enter a link to a photo of the pundit of you'd like.">
+              <input type="text" name="photo" class="form-control" placeholder="Enter a link to a photo of the pundit if you'd like.">
             </fieldset>
             <fieldset class="form-group">
               <input type="text" name="checkDate" id="date-picker" class="form-control" placeholder="When should we check the prediction?" required=''>
