--- a/views/admin.html
+++ b/views/admin.html
@@ -65,6 +65,10 @@
 
       <div class= "row" id="targetAdmin">
         <div class="col-md-8">
+          <div id="punditEntity">
+            here
+          </div>
+
           <script id="templateAdmin" type="text/x-handlebars-template">
             {{#each pundit}}
               <p>
