--- a/views/index.html
+++ b/views/index.html
@@ -107,6 +107,7 @@
           <div id="targetCurrent">
             <script id="current-prediction-template" type="text/x-handlebars-template">
               <p>
+                <!-- TODO: photo url exists but does not load on my copy -jc -->
                 <img src='{{photo}}'>
                 {{name}}
                 <br>
